objects/Leave__c.object
<CustomObject><fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Leave</relationshipLabel>
        <relationshipName>Leave</relationshipName>
        <type>Lookup</type>
    </fields><fields>
        <fullName>Current__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Current</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields><fields>
        <fullName>Expected_Return_Date__c</fullName>
        <label>Expected Return Date</label>
        <type>Date</type>
    </fields><fields>
        <fullName>Leave_External_ID__c</fullName>
        <externalId>true</externalId>
        <label>Leave External ID</label>
        <length>20</length>
        <type>Text</type>
        <unique>true</unique>
    </fields><fields>
        <fullName>Other_Reason__c</fullName>
        <label>Other Reason</label>
        <length>255</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Reason__c</fullName>
        <label>Reason</label>
        <length>175</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields><fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <length>175</length>
        <type>Text</type>
    </fields><allowInChatterGroups>true</allowInChatterGroups><compactLayoutAssignment>SYSTEM</compactLayoutAssignment><deploymentStatus>Deployed</deploymentStatus><enableActivities>true</enableActivities><enableBulkApi>true</enableBulkApi><enableFeeds>false</enableFeeds><enableHistory>true</enableHistory><enableReports>true</enableReports><enableSearch>true</enableSearch><enableSharing>true</enableSharing><enableStreamingApi>true</enableStreamingApi><label>Leave</label><nameField>
        <displayFormat>LV-{00000}</displayFormat>
        <label>Leave Name</label>
        <type>AutoNumber</type>
    </nameField><pluralLabel>Leave</pluralLabel><sharingModel>ReadWrite</sharingModel><listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews></CustomObject>